# zarnitsa

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  render.yaml
.github/workflows/: pages.yml
data/corpus/snapshots/2026-05/: 01_sample_entry.md  02_doctrine_2014_general_provisions.md  03_doctrine_2014_external_threats.md  04_doctrine_2014_internal_threats.md  05_doctrine_2014_modern_conflict.md  06_doctrine_2014_nuclear_policy.md  07_doctrine_2014_use_of_force.md  08_doctrine_2014_peacetime_tasks.md  09_doctrine_2014_mobilization.md  10_doctrine_2014_armament_uav.md  11_doctrine_2014_defense_industry.md  12_gerasimov_2013_new_type_warfare.md  13_gerasimov_2013_military_science.md  14_svo_causes_nato_expansion.md  15_svo_causes_donbas_2014_2022.md  16_svo_justification_official.md  17_ukraine_nationalism_historical.md  18_ukraine_post_soviet_collapse.md  19_arab_spring_color_revolution_framing.md  20_black_book_donbas_atrocities_svo.md  21_black_book_donbas_atrocities_2014_2021.md  22_fpv_drone_classification_specs.md  (+24 more)
data/personas/: 01_cgs.md  04_tsvsi.md  05_gru.md  06_vbps.md  07_mod.md  08_cinc.md  09_sino_liaison.md  11_sovbez.md  README.md
data/personas/archived/: 02_gou.md  03_gomu.md  10_econ_advisor.md
docker/: Dockerfile  offline.yml
docs/: architecture.md  deployment.md  distribution.md  personas.md  practicum_plan.md  practicum_plan.txt
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: main.ts  style.css
scripts/: build_corpus.py  extract_corpus_from_docx.py
src/zarnitsa/: __init__.py  cli.py  config.py  exceptions.py  types.py
src/zarnitsa/api/: __init__.py  app.py  schemas.py
src/zarnitsa/corpus/: __init__.py  entry.py  retrieval.py
src/zarnitsa/orchestrator/: __init__.py  cultural_prior.py  graph.py
src/zarnitsa/personas/: __init__.py  loader.py
src/zarnitsa/provenance/: __init__.py  tagger.py
src/zarnitsa/providers/: __init__.py  anthropic_provider.py  base.py  factory.py  ollama_provider.py
tests/: test_corpus.py  test_personas.py
