[project]
name = "zarnitsa"
version = "0.0.1"
description = "Multi-institution Russian decision-modeling system for OPFOR red-team and adversary-behavior training"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
    { name = "Zarnitsa contributors" },
]
keywords = ["llm", "wargaming", "opfor", "red-team", "russia", "doctrine", "multi-agent"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "anthropic>=0.40.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "langgraph>=0.2.50",
    "langchain-core>=0.3.0",
    "python-frontmatter>=1.1.0",
    "pyyaml>=6.0.2",
    "httpx>=0.27.0",
    "rich>=13.9.0",
    "typer>=0.13.0",
    "numpy>=2.0.0",
]

[project.optional-dependencies]
cloud-extras = [
    "google-generativeai>=0.8.0",
]
offline = [
    "ollama>=0.4.0",
    "sentence-transformers>=3.3.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "httpx>=0.27.0",
]

[project.scripts]
zarnitsa = "zarnitsa.cli:app"

[project.urls]
Homepage = "https://github.com/elyzachiggins/zarnitsa"
Repository = "https://github.com/elyzachiggins/zarnitsa"
Issues = "https://github.com/elyzachiggins/zarnitsa/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zarnitsa"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
